# ScaleTraining

./: .gitignore  AGENTS.md  BUGS.md  CLAUDE.md  README.md  TODO.md  baseline_examples.md  config.py  dataload.py  dataset_explorer.ipynb  main.py  model.py  ongoing.md  optimizers.py  playground.ipynb  pyproject.toml  result.json  run_sweep.py  sample_generation.py  sweep_config.yaml  test.py  tests.py  trainer.py
.hydra/: config.yaml  hydra.yaml
conf/: __init__.py  config.yaml  device.yaml  generation.yaml  logging.yaml  model.yaml  moe.yaml  optimizer.yaml  paths.yaml  tokenizer.yaml  train.yaml  transformer.yaml
conf/hydra/sweeper/: grid.yaml
conf/logging/: default.yaml
conf/model/: default.yaml
conf/moe/: default.yaml
conf/sweeper/: basic.yaml  optuna.yaml
conf/tokenizer/: default.yaml
conf/training/: default.yaml
conf/transformer/: default.yaml
notes/: TODO.md  ongoing.md  refactor.md  thoughts_9-1-25.md
notes/old/: rope-thoughts.md  smart-batching.md
scaletraining/: config.py  main.py
scaletraining.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scaletraining/data_processing/: batch_packer.py  dataload.py  dataloading.py  tokenization.py
scaletraining/model/: __init__.py  trainer.py
scripts/: build_pretraining_corpus.py  cleanup_runs.py  model_size.py  summarize_multirun.py  sync_wandb_runs.py
src/: config.py
src/data-processing/: dataload.py  tokenization.py
src/scaletraining/: config.py  main.py
src/scaletraining.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/scaletraining/config/: __init__.py
src/scaletraining/data_processing/: __init__.py  batch_packer.py  corpus_builder.py  dataloading.py  dataset_utils.py  tokenization.py  (+2 more)
src/util/: tests.py
tests/: tests.py
tests/data_processing/: test_batch_packer.py
tests/model/: test_optimizers.py
wandb/: latest-run
wandb/run-20250827_203319-l1avdqgm/: run-l1avdqgm.wandb
wandb/run-20250827_203634-665q8jo5/: run-665q8jo5.wandb
(+35 files in other folders)
