[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaletraining"
version = "0.1.0"
description = "Training platform for language models"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["scaletraining*"]
exclude = ["datasets*", "notes*", "notebooks*", "wandb*"]

[project.scripts]
scaletraining-tokenize = "scaletraining.data_processing.tokenization:main"
