[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaletraining"
version = "0.1.0"
description = "Training platform for language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["scaletraining*"]
exclude = ["datasets*", "notes*", "notebooks*", "wandb*"]

[project.scripts]
scaletraining-tokenize = "scaletraining.data_processing.tokenization:main"
scaletraining-train = "scaletraining.entrypoints.train:main"
scaletraining-generate = "scaletraining.entrypoints.generate:main"
scaletraining-pack = "scaletraining.data_processing.batch_packer:main"
scaletraining-prepare-data = "scaletraining.entrypoints.prepare_data:main"
